--- a/references.bib
+++ b/references.bib
@@ -376,3 +376,66 @@
 	url = {http://dx.doi.org/10.1001/jamainternmed.2021.2441},
 	langid = {en}
 }
+
+@article{members2004,
+	title = {Members of the who Multicentre Growth Reference Study Group},
+	year = {2004},
+	month = {01},
+	date = {2004-01},
+	journal = {Food and Nutrition Bulletin},
+	pages = {S13--S14},
+	volume = {25},
+	number = {1{\_}suppl{\_}1},
+	doi = {10.1177/15648265040251s103},
+	url = {http://dx.doi.org/10.1177/15648265040251S103},
+	langid = {en}
+}
+
+@article{mercedes2004,
+author = {de Onis, Mercedes and Garza, Cutberto and Victora, Cesar G. and Onyango, Adelheid W. and Frongillo, Edward A. and Martines, Jose},
+title ={The who Multicentre Growth Reference Study: Planning, Study Design, and Methodology},
+
+journal = {Food and Nutrition Bulletin},
+volume = {25},
+number = {1\_suppl\_1},
+pages = {S15-S26},
+year = {2004},
+doi = {10.1177/15648265040251S104},
+    note ={PMID: 15069916},
+
+URL = { 
+    
+        https://doi.org/10.1177/15648265040251S104
+    
+    
+
+},
+eprint = { 
+    
+        https://doi.org/10.1177/15648265040251S104
+    
+    
+
+}
+,
+    abstract = { The World Health Organization (WHO) Multicentre Growth Reference Study (MGRS) is a community-based, multicountry project to develop new growth references for infants and young children. The design combines a longitudinal study from birth to 24 months with a cross-sectional study of children aged 18 to 71 months. The pooled sample from the six participating countries (Brazil, Ghana, India, Norway, Oman, and the United States) consists of about 8,500 children. The study subpopulations had socioeconomic conditions favorable to growth, and low mobility, with at least 20\% of mothers following feeding recommendations and having access to breastfeeding support. The individual inclusion criteria were absence of health or environmental constraints on growth, adherence to MGRS feeding recommendations, absence of maternal smoking, single term birth, and absence of significant morbidity. In the longitudinal study, mothers and newborns were screened and enrolled at birth and visited at home 21 times: at weeks 1, 2, 4, and 6; monthly from 2 to 12 months; and every 2 months in their second year. In addition to the data collected on anthropometry and motor development, information was gathered on socioeconomic, demographic, and environmental characteristics, perinatal factors, morbidity, and feeding practices. The prescriptive approach taken is expected to provide a single international reference that represents the best description of physiological growth for all children under five years of age and to establish the breastfed infant as the normative model for growth and development. }
+}
+
+
+@article{
+Myers1984,
+author = {J.E. Myers },
+title = {Differential ethnic standards for lung functions, or one standard for all?},
+journal = {South African Medical Journal},
+volume = {65},
+number = {19},
+pages = {768-772},
+year = {1984},
+doi = {10.10520/AJA20785135\_10800},
+URL = {https://journals.co.za/doi/abs/10.10520/AJA20785135_10800},
+eprint = {https://journals.co.za/doi/pdf/10.10520/AJA20785135_10800},
+abstract = {  The multiple regression equation predicting lung function values for a study population of South African Blacks is compared with equations predicting normal values for Blacks elsewhere, and in almost all cases is found to predict higher values.  }
+}
+
+
+
