--- a/who-is-healthy-anyways.qmd
+++ b/who-is-healthy-anyways.qmd
@@ -867,23 +867,27 @@ In the leave-one-out analysis for the youth, the proportion of racial gap explai
 
 ## Discussion
 
-Our results reinforce the critical role of environmental, social, and lifestyle factors in shaping health outcomes and suggest that a substantial portion of the racial gap in lung function can be explained by SDoH, with up to 26% of the gap in adults, and as much as 35% in males under 20 years of age, attributed to these factors. Our findings attribute a higher proportion of racial differences in lung function to social and environmental exposures than previously reported [@harik-khan2001; @harik-khan2004].
+Our results show that a higher than previously reported proportion of racial differences in lung function between Black and White Americans can be explained by differences in SDoH [@harik-khan2001; @harik-khan2004]. Within studied SDoH variables in NHANES 2007-2012, we were able to explain 26% of the racial gap in lung function in adults, and as much as 35% of the gap in males under 20 years of age. The true contribution of SDoH to racial gaps in lung function is likely much higher, as only some aspects of SDoH are properly captured in NHANES. The difficulty of measuring SDoH and our incomplete and evolving understanding of the complex interplay between racism, social, and environmental factors suggest that what we see might just be the tip of the iceberg.
 
-The higher explained proportion of the racial gap in lung function among individuals born in the US (i.e., up to 36% of the racial gap in adult FEV~1~ explained by the studied exposures) suggests that US-specific systemic factors such as racism, segregation, redlining, and other socio-economic inequities profoundly impact lung health. This aligns with several studies have reported significantly higher health burdens in US-born racialized people compared to racialized immigrants to the US [@doamekpor2015; @brown2017] and the growing body of literature that implicates historical and structural inequities, such as redlining and differential environmental exposures, in perpetuating health disparities among racialized communities in general [@nardone2020; @schuyler2022; @gaffney2021; @levy2018].
+Our results are consistent with a growing body of literature that implicates historical and structural inequities in perpetuating health disparities among racialized communities [@nardone2020; @schuyler2022; @gaffney2021; @levy2018]. However, we also observed a higher explained proportion of the racial gap in lung function among individuals born in the US (i.e., up to 36% of the racial gap in adult FEV1 explained by the studied exposures). This might be related to US-specific systemic factors such as the enduring impact of slavery, segregation, redlining, and other inequities and injustices that profoundly affect lung health. Supporting this notion, some studies have reported significantly higher levels of allostatic load and hypertension in US-born self-identified Black individuals compared to Black immigrants to the US [@doamekpor2015; @brown2017].
 
-Our analysis revealed that excluding individuals based on home ownership, BMI, and occupational exposures accounts for a significant portion of the explainable racial gap, indicating that financial stability, physical health, and work-related factors are pivotal contributors to lung function disparities.
+Introducing nine additional exclusion criteria to reference populations significantly minimized racial disparities in lung function in our study. Our exploratory analysis revealed that occupational exposures, obesity, and non-home ownership were the three exclusion criteria most responsible for explaining the racial gap in lung function.
 
-Our study highlights the necessity for further research to comprehensively understand the interplay between SDoH, environmental exposures, and lung function across different populations. Future studies should aim to incorporate a wider array of SDoH, such as stress levels, access to healthcare, neighborhood safety, and intergenerational wealth effects. There is also a need for longitudinal studies that can elucidate causal pathways and the potential impact of policy changes on reducing health disparities. Moreover, exploring the intersectionality of race, gender identity, and other demographic factors could provide a more nuanced understanding of how diverse identities influence lung health outcomes. Expanding research to include international cohorts could enhance the generalizability of findings and support the development of global strategies to address lung health disparities.
+What are the implications for lung function reference equations? Since these equations are designed to predict healthy lung function, they need to make an assumption about the nature of racial gaps in lung function, either explicitly or implicitly. For decades, ATS lung function testing guidelines have acknowledged the effects of social and environmental factors on the variability of lung function across populations [@lungfun1991]. However, race-specific lung function reference equations implicitly assumed racial gaps in lung function were normal and benign, the same way that differences based on biological sex at birth, height, and age, were considered normal. This practice was at odds with the recognized role of SDoH, reinforced inequities not just by perpetuating the notion of race as a biological determinant, but also by failing to account for the fact that at least some of the observed racial gap may be pathological, due to injury caused by SDoH. In 2023, the ATS statement on race and ethnicity in pulmonary function testing advocated for a significant shift in practice. The statement acknowledged the importance and complexity of these exposures, rejected fixed differences between races, and embraced a more uncertain race-averaged reference equation, instead of the misleading statistical accuracy of the previous race-based equations [@bhakta2023].
 
-Certain limitations must be acknowledged. Our reliance on NHANES data restricts generalizability beyond the United States and hinders our ability to explore nuanced race and ethnicity groups. Incomplete understand and limited nature of available data also limits our assessment of complex social and environmental exposures, such as effects of racism, intergenerational wealth effects, life-course exposure to pollutants, violence, stress, and allostatic load. Additionally, the absence of data on gender identity prevented us from analyzing potential differential effects.
+The newly recommended race-averaged GLI-Global reference equations no longer assume that racial differences in lung function are normal and benign differences. However, do they assume these differences are solely due to disproportionate environmental exposures and SDoH? The answer seems to be no, as GLI-Global equations use averages of race-specific reference lung function projections, as opposed to projecting the highest race-specific value for all [@bowerman2023].
 
-<!--[Does SDoH affect FEV1 beyond race?]-->
+Developing unbiased, fair, and practical lung function reference equations is challenging because of our limited understanding of complex exposures, lack of good representative data, and diverse applications of pulmonary function tests. Recognizing the good faith efforts of those working diligently to find a balance between feasibility, practicality, and an ideal accounting for all potential biases, one potential way forward, at least for some use cases of spirometry, involves explicitly accounting for effect of complex exposures. This does not require asking patients for their exposure history or social determinants at the point of care and can be achieved by tightening the inclusion criteria in the reference populations. Excluding individuals with unfavourable SDoH from reference populations results in a more uniformly healthy reference population across racial identities and makes the dataset less biased. However, this approach may reduce the racial representativeness of the data due to disproportionate exposures. Ensuring a sufficiently large and representative initial sample may allow oversampling to achieve representativeness across all groups.
 
-These findings have important implications for clinical practice and policy. Our results show a larger than previously known effect of complex exposures on racial gaps in lung function, and the true proportion is likely higher than our estimates. However, the racial gaps in lung function cannot yet be completely explained by disproportionate impact of SDoH. The previous guidelines that recommended race-specific reference equations for pulmonary function testing risk assumed racial gaps in lung function were normal and reinforced inequities by perpetuating the notion of race as a biological determinant, rather than acknowledging the role of modifiable social factors[@bhakta2023]. However, the new race-averaged reference equations also fail to account for our understanding of the the effect size of social and environmental exposures on lung function.
+Proposals for developing lung function standards using data from participants of "middle-class origin who live and work in clean environments" have appeared in the literature as early as 1984 [@Myers1984]. There is also precedence for choosing reference populations based on favourable SDoH outside of lung function testing. One prominent example is the WHO Multicentre Growth Reference Study that was conducted to create birth to 2-years growth standards [@mercedes2004]. The study's sites were chosen through a meticulous process that took into account geographical and ethnic representativeness, and included affluent communities in the cities of New Delhi, Muscat, Accra, Oslo, Davis, and Pelotas. The eligibility criteria for individual mother and children included no health, environmental, and economic constraints on growth, mother's willingness to follow WHO feeding recommendations, among others [@mercedes2004].
+
+Our study highlights the necessity for further research to understand the interplay between SDoH, environmental exposures, and lung function across different populations. Future studies should aim to incorporate a wider array of SDoH, such as stress levels, access to healthcare, neighborhood safety, and intergenerational effects, including those related to wealth, social status, poverty, and trauma. There is also a need for longitudinal studies that can elucidate causal pathways and the potential impact of policy changes on reducing health disparities. Exploring the intersectionality of race and other demographic factors could provide a more nuanced understanding of how diverse identities influence lung health outcomes. Expanding research to include international cohorts could enhance the generalizability of findings and support the development of global and localized strategies to address lung health disparities.
+
+Certain limitations must be acknowledged. Our reliance on NHANES data restricts generalizability beyond the United States and hinders our ability to explore nuanced race and ethnicity groups. Incomplete understanding and limited nature of available data also limits our assessment of complex social and environmental exposures and identities, such as effects of racism, intergenerational wealth effects, life-course exposure to pollutants, gender identity, violence, stress, and allostatic load.
 
 ## Conclusions
 
-Our study underscores the significant influence of SDoH on lung function and shows that a larger proportion of racial gaps in lung function can be explained by SDoH than previously reported. However, we were unable to account for all racial differences in lung function based on measured SDoH in NHANES.
+Our study underscores the significant influence of social determinants of health on lung function and shows that a larger proportion of racial gaps in lung function can be explained by social determinants of health than previously reported. However, we were unable to account for all racial differences in lung function based on measured social determinants of health in NHANES 2007-2012.
 
 ## References
 
@@ -1007,8 +1011,6 @@ Characteristics of Black Participants Included in the Baseline Reference Populat
 ### Other Race Groups
 
 ::: {#suppfig-Asian}
-
-
 ```{r, message=F, warning=F}
 refs_adult_asian <- createCohort("adult", includedRace=c(3,6))
 message("Adult counts:")
@@ -1020,8 +1022,9 @@ message(map_df(refs_youth_asian, count))
 
 plot_racial_gap_change(refs_adult_asian, refs_youth_asian, includedRace=c(3,6))
 ```
+
 Asian vs. White Population
-::: 
+:::
 
 ::: {#suppfig-Mexican}
 Mexican-American vs. White
@@ -1039,11 +1042,11 @@ message(map_df(refs_youth_mex, count))
 plot_racial_gap_change(refs_adult_mex, refs_youth_mex, includedRace=c(3,1))
 
 ```
+
 Mexican-American vs. White population
-::: 
+:::
 
 ::: {#suppfig-hispanic}
-
 ```{r, message=F, warning=F}
 
 refs_adult_hisp <- createCohort("adult", includedRace=c(3,2))
@@ -1056,11 +1059,11 @@ message(map_df(refs_youth_hisp, count))
 
 plot_racial_gap_change(refs_adult_hisp, refs_youth_hisp, includedRace=c(3,2))
 ```
+
 Other Hispanic vs. White population
 :::
 
 ::: {#suppfig-Other}
-
 ```{r, message=F, warning=F}
 
 refs_adult_oth <- createCohort("adult", includedRace=c(3,7))
@@ -1074,10 +1077,9 @@ message(map_df(refs_youth_oth, count))
 plot_racial_gap_change(refs_adult_oth, refs_youth_oth, includedRace=c(3,7))
 
 ```
+
 Other Race Including Multiracial vs. White
-
 :::
-
 
 ::: {#suppfig-mexicanblack}
 ```{r, message=F, warning=F}
@@ -1114,74 +1116,70 @@ Changes in lung function racial gaps based on income to poverty ratio
 ### Leave-one-out Analysis
 
 ::: {#suppfig-leavejob}
-
 ```{r, warning=FALSE, message=FALSE}
  plot_racial_gap_change(refs_adult[-2], refs_youth[-2])
 ```
+
 Leaving out job exposure
 :::
 
 ::: {#suppfig-leavephysicalactivity}
-
 ```{r, warning=FALSE, message=FALSE}
  plot_racial_gap_change(refs_adult[-3], refs_youth[-3])
 ```
-Leaving out physical activity
 
+Leaving out physical activity
 :::
 
 ::: {#suppfig-leavematernalsmoke}
-
 ```{r, warning=FALSE, message=FALSE}
  plot_racial_gap_change(refs_adult[-4], refs_youth[-4])
 ```
+
 Leaving out maternal smoke
 :::
 
 ::: {#suppfig-leavesecondhandsmoke}
-
 ```{r, warning=FALSE, message=FALSE}
  plot_racial_gap_change(refs_adult[-5], refs_youth[-5])
 ```
+
 Leaving out second-hand smoke exposure
 :::
 
 ::: {#suppfig-leaveobesity}
-
 ```{r, warning=FALSE, message=FALSE}
  plot_racial_gap_change(refs_adult[-6], refs_youth[-6])
 ```
+
 Leaving out obesity
 :::
 
 ::: {#suppfig-leavehomeowner}
-
 ```{r, warning=FALSE, message=FALSE}
  plot_racial_gap_change(refs_adult[-7], refs_youth[-7])
 ```
+
 Leaving out homeownership
 :::
 
 ::: {#suppfig-leaveinsurance}
-
 ```{r, warning=FALSE, message=FALSE}
  plot_racial_gap_change(refs_adult[-8], refs_youth[-8])
 ```
+
 Leaving out health insurance
 :::
 
 ::: {#suppfig-leaveeducation}
-
-
 ```{r, warning=FALSE, message=FALSE}
  plot_racial_gap_change(refs_adult[-9], refs_youth[-9])
 ```
-Leaving out education
 
+Leaving out education
 :::
 
 ::: {#suppfig-leavediet}
-
 ```{r, warning=FALSE, message=FALSE}
  plot_racial_gap_change(refs_adult[-10], refs_youth[-10])
 ```
