--- a/who-is-healthy-anyways.qmd
+++ b/who-is-healthy-anyways.qmd
@@ -871,6 +871,8 @@ Our results show that a higher than previously reported proportion of racial dif
 
 Our results are consistent with a growing body of literature that implicates historical and structural inequities in perpetuating health disparities among racialized communities [@nardone2020; @schuyler2022; @gaffney2021; @levy2018]. However, we also observed a higher explained proportion of the racial gap in lung function among individuals born in the US (i.e., up to 36% of the racial gap in adult FEV1 explained by the studied exposures). This might be related to US-specific systemic factors such as the enduring impact of slavery, segregation, redlining, and other inequities and injustices that profoundly affect lung health. Supporting this notion, some studies have reported significantly higher levels of allostatic load and hypertension in US-born self-identified Black individuals compared to Black immigrants to the US [@doamekpor2015; @brown2017].
 
+For Asian people,
+
 Introducing nine additional exclusion criteria to reference populations significantly minimized racial disparities in lung function in our study. Our exploratory analysis revealed that occupational exposures, obesity, and non-home ownership were the three exclusion criteria most responsible for explaining the racial gap in lung function.
 
 What are the implications for lung function reference equations? Since these equations are designed to predict healthy lung function, they need to make an assumption about the nature of racial gaps in lung function, either explicitly or implicitly. For decades, ATS lung function testing guidelines have acknowledged the effects of social and environmental factors on the variability of lung function across populations [@lungfun1991]. However, race-specific lung function reference equations implicitly assumed racial gaps in lung function were normal and benign, the same way that differences based on biological sex at birth, height, and age, were considered normal. This practice was at odds with the recognized role of SDoH, reinforced inequities not just by perpetuating the notion of race as a biological determinant, but also by failing to account for the fact that at least some of the observed racial gap may be pathological, due to injury caused by SDoH. In 2023, the ATS statement on race and ethnicity in pulmonary function testing advocated for a significant shift in practice. The statement acknowledged the importance and complexity of these exposures, rejected fixed differences between races, and embraced a more uncertain race-averaged reference equation, instead of the misleading statistical accuracy of the previous race-based equations [@bhakta2023].
