--- a/who-is-healthy-anyways.qmd
+++ b/who-is-healthy-anyways.qmd
@@ -103,11 +103,19 @@ library(table1)
 library(rspiro)
 library(stringr)
 
-compute_gap_reduction <- function(df, measure) {
-  df %>% 
-    filter(Measure == measure) %>%
-    summarise(Reduction = (last(estimate) - first(estimate)) / first(estimate)) %>% 
-    round(2)
+compute_gap_reduction <- function(df, measure, type) {
+  
+    if (type=="perc") {
+    df %>% 
+      filter(Measure == measure) %>%
+      summarise(Reduction = 100*(last(estimate) - first(estimate)) / first(estimate)) %>% 
+      round(2) } else if (type=="abs"){
+          df %>% 
+      filter(Measure == measure) %>%
+      summarise(Reduction = (last(estimate) - first(estimate)) %>% round(2)) 
+    } else
+    {stop("Invalid type for compute_gap_reduction")}
+  
 }
 
 createCohort <- function (ageGroup, incomePovertyRatioOnly=FALSE, sex='all', BirthCountry='all', homeOwnershipOnly=FALSE, includedRace=c(3,4)) {
@@ -350,11 +358,8 @@ ref10 <- ref9 %>%
 }
 
 
-
-
 refs <- list(ref1, ref2, ref3, ref4, ref5, ref6, ref7, ref8, ref9, ref10, ref11)
 
-}
 
 return(refs)
 }
@@ -640,8 +645,12 @@ plot_racial_gap_change <- function(refs_adult_list, refs_youth_list, single_sex 
   gap_reduction_messages <- function(race_coeffs, age_group) {
     measures <- c(metric1, metric2)
     for (measure in measures) {
-      message(paste0("For ", measure, " in ", age_group, ", the reduction in gap was ", 
-                     compute_gap_reduction(race_coeffs, measure)))
+      message(paste0("For ", measure, " in ", age_group, 
+                     ", the percentage reduction in gap was ", 
+                     compute_gap_reduction(race_coeffs, measure, type="perc"), "%"))
+      message(paste0("For ", measure, " in ", age_group, 
+                     ", the absolute reduction in gap was ", 
+                     compute_gap_reduction(race_coeffs, measure, type="abs")))
     }
   }
 
