--- a/who-is-healthy-anyways.qmd
+++ b/who-is-healthy-anyways.qmd
@@ -357,7 +357,7 @@ ref10 <- ref9 %>%
                (lang_home_asian==5)))  %>%
      filter((is.na(lang_home_en_bw) | 
                (lang_home_en_bw==1)))  %>%
-  mutate(ref="english at home")
+  mutate(ref="English at home")
   
 
 }
