--- a/who-is-healthy-anyways.qmd
+++ b/who-is-healthy-anyways.qmd
@@ -58,7 +58,7 @@ execute:
 
 **METHODS:** We defined reference populations from 18,359 Black and White NHANES 2007-2012 participants. Starting with non-smokers without respiratory symptoms or diagnoses, we sequentially excluded those with confirmed occupational exposure to dust/fumes, physical inactivity, maternal tobacco use, obesity, no home ownership, no insurance, lower education, and self-reported unhealthy diet. Across successive populations, we compared average age-, sex-, and height-adjusted differences in FEV~1~ and FVC between Black and White adults (≥20) and youth (\<20).
 
-**RESULTS:** From the base reference population to the most restrictive, the number of included participants decreased from 4,843 to 1,099. The percentage of Black participants decreased from 19% to 9% in youth and 14% to 4% in adults. The racial gap in FEV~1~ and FVC was reduced by 25% and 26% in children and youth, and by 26% and 19% in adults over 20 years of age.
+**RESULTS:** From the base reference population to the most restrictive, the number of included participants decreased from 4,843 to 1,099. The percentage of Black participants decreased from 19% to 9% in youth and 14% to 4% in adults. The gap between Black and White Americans in FEV~1~ and FVC was reduced by 25% and 26% in children and youth, and by 26% and 19% in adults over 20 years of age.
 
 **CONCLUSIONS:** The SDoH investigated herein explain up to 25% of the racial gap in lung function among American youth. Further research on adults is required.
 
@@ -112,11 +112,11 @@ compute_gap_reduction <- function(df, measure, type) {
       round(2) } else if (type=="abs"){
         df %>% 
         filter(Measure == measure) %>%
-        summarise(Reduction = -1*(last(estimate) - first(estimate)) %>% round(2)) 
+        summarise(Reduction = -1*(last(estimate) - first(estimate)) %>% round(3)) 
       } else if (type=="baseline") {
         df %>% 
         filter(Measure == measure) %>%
-        summarise(Reduction = -1*(first(estimate)) %>% round(2)) 
+        summarise(Reduction = -1*(first(estimate)) %>% round(3)) 
       
     } else
     {stop("Invalid type for compute_gap_reduction")}
@@ -759,7 +759,15 @@ predPlot <- function(df) {
 
 ```
 
-From the base reference population to the most restrictive, the number of included participants decreased from 4,843 to 1,099, while the proportion of Black participants decreased from 19% to 9% in youth and 14% to 4% in adults, as shown in @fig-racialgap. The reduction in the proportion of Black participants after multiple exclusions based on SDoH confirms disproportionate impact of these factors on Black individuals in the US. After excluding those with various social and environmental exposures, the racial gap in FEV~1~ and FVC was reduced by 26% and 19% in adults, and 25% and 26% in youth.
+From the base reference population to the most restrictive, the number of included participants decreased from 4,843 to 1,099, while the proportion of Black participants decreased from 19% to 9% in youth and 14% to 4% in adults, as shown in @fig-racialgap. The reduction in the proportion of Black participants after multiple exclusions based on SDoH confirms disproportionate impact of these factors on Black individuals in the US.
+
+In the baseline reference population, average FEV~1~ and FVC were 0.35 L and 0.42 L higher in White youth compared with Black youth, after adjusting for age, height, and biological sex at birth. For adults, the adjusted racial gap was 0.50 L for FEV~1~ and 0.69 for FVC. After excluding those with unfavourable SDoH, the racial gap in FEV~1~ and FVC was reduced by 25% and 26% in youth and by 26% and 19% in adults (@fig-racialgap).
+
+Excluding individuals with various SDoH did not reduce the proportion of Asian individuals (@suppfig-Asian). In the baseline reference population, average FEV~1~ and FVC were 0.18 L and 0.31 L higher in White youth compared with Asian youth, after adjusting for age, height, and biological sex at birth. For adults, the adjusted racial gap was 0.37 L for FEV~1~ and 0.50 for FVC. After excluding those with unfavourable SDoH, the racial gap in FEV~1~ and FVC was reduced by 7% and 13% in youth but, surprisingly, increased by 14% and 11% in adults (@suppfig-Asian).
+
+Among successive reference populations, the proportion of Mexican-Americans substantially decreased, confirming disproportionate impact of these exposures on Mexican-American population, compared to White population. Mexican-American youth had slightly higher FEV~1~ and FVC at baseline compared to White youth. Average FEV~1~ and FVC were 0.06 L and 0.04 L higher in Mexican-American youth compared to White youth, after adjusting for age, height, and biological sex at birth. Mexican-American and White adults had similar adjusted FEV~1~ and FVC at baseline (@suppfig-Mexican). Excluding individuals with unfavourable SDoH resulted in higher FEV~1~ and FVC values for Mexican-American population compared to White population. Adjusted average FEV~1~ and FVC values for Mexican-American youth were 0.09 L and 0.06 L higher than White youth. For adults, average FEV~1~ and FVC were both higher by 0.03 L (@suppfig-Mexican).
+
+The appendix includes additional results for non-Mexican Hispanic population (@suppfig-hispanic) and those who identified as "Other-including multiracial" (@suppfig-Other).
 
 ```{r, warning=FALSE, message=FALSE}
 #| label: fig-racialgap
@@ -891,10 +899,6 @@ plot_racial_gap_change(createCohort3Factor("adult"), createCohort3Factor("youth"
 #### Country of Birth
 
 We also explored the intersection of self-identified race and country of birth. After excluding those with various social and environmental exposures, the racial gap in FEV~1~ and FVC was reduced by 24% and 25% in US-born youth, and by 35% and 23% in US-born adults (@suppfig-usborn). Black and White individuals born outside of the US had higher FEV~1~ and FVC, were less exposed to second-hand and maternal smoking, had healthier diets, but also had more occupational exposures (@supptab-fig1byusborn). Black individuals born out of the US had higher income and were more likely to be covered by health insurance than US-born Black individuals while among White participants, those who were born in the US had higher income and higher insurance coverage (@supptab-fig1byusborn).
-
-#### Other Race Categories
-
-Excluding individuals with various SDoH did not reduce the proportion of Asian individuals, nor did it reduce FEV~1~ or FVC gap between Asian and White individuals in the US (@suppfig-Asian). Among successive reference populations, the proportion of Mexican-Americans did decrease, confirming disproportionate impact of these exposures on Mexican-American population. Mexican-American and White populations had similar FEV~1~ and FVC at baseline, nonetheless, excluding individuals with various exposures resulted in slightly larger FEV~1~ and FVC values in Mexican-Americans compared to White individuals (@suppfig-Mexican). We observed somewhat similar results for non-Mexican Hispanic population (@suppfig-Hispanic).
 
 #### Leave-one-out Analysis
 
