separate pop composition plot added

--- a/who-is-healthy-anyways.qmd
+++ b/who-is-healthy-anyways.qmd
@@ -321,7 +321,7 @@ ref6 <- ref5 %>%
 
 ref7 <- ref6 %>%
     filter(is.na(home_ownership) | (home_ownership==1))  %>%
-  mutate(ref="home owner")
+  mutate(ref="homeowner")
 
 ref8 <- ref7 %>%
      filter((is.na(has_insurance) | 
@@ -819,6 +819,74 @@ flowchart TD
  
 ```
 
+```{r, warning=FALSE, message=FALSE}
+#| label: fig-popchange
+#| fig-cap: Changes in population composition in successively more restrictive reference populations
+
+
+refs_adult_all_races <- createCohort("adult", includedRace = c(1,2,3,4,5,6,7))
+message("Adult counts:")
+message(map_df(refs_adult_all_races, count))
+
+refs_youth_all_races <- createCohort("youth", includedRace = c(1,2,3,4,5,6,7))
+message("Youth counts:")
+message(map_df(refs_youth_all_races, count))
+
+plot_participants_change <- function(refs_adult_list, refs_youth_list, single_sex = FALSE, 
+                                     metric1="fev1", metric2="fvc", includedRace=c(1,2,3,4,5,6,7)){
+  
+  # Combine refs_df_adult and refs_df_youth
+  combine_refs_df <- function(refs_list) {
+    refs_df <- do.call(rbind, lapply(seq_along(refs_list), function(i) refs_list[[i]]))
+    refs_df %>%
+      mutate(ref=factor(ref, levels=c("reference", "job unexposed", "physically active", 
+                                      "no maternal smoke", "no 2ndhand smoke", "not obese", "homeowner", "insured","educated", "healthy diet"))) %>%
+      group_by(ref) %>%
+      count(race_text_nhanes, wt = MEC6YR) %>%
+      mutate(perc = n / sum(n)) %>%
+      ungroup()
+  }
+  
+  refs_df_percent_adult <- combine_refs_df(refs_adult_list) 
+  refs_df_percent_youth <- combine_refs_df(refs_youth_list)
+  
+  plot_gap_perc <- function(refs_df_percent, title, suppress_legend=FALSE) {
+    p <- ggplot(refs_df_percent) +
+      geom_bar(aes(x=ref, y=perc, fill=race_text_nhanes), stat="identity", position = "fill") +
+      geom_text(aes(x=ref, y=perc, fill=race_text_nhanes, label=scales::percent(perc, accuracy = 1)), position = position_stack(vjust = 0.5), color = "white", size = 2) +
+      scale_y_continuous(labels=scales::percent) +
+      ggtitle(title) +
+      labs(x = "", y = "Participants") +
+      guides(fill=guide_legend(title="Race")) +
+      theme_few() + theme(axis.text.x = element_text(angle = 90, size=7, hjust=0.95,vjust=0.2))
+    
+    
+    if (suppress_legend) {
+      p <- p +  theme(legend.position="none")
+    } else {
+      p <- p +  theme(legend.position="bottom") 
+    }
+    return(p)
+  }
+  
+  gap_perc_black_adult <- plot_gap_perc(refs_df_percent_adult, "Adults (≥20 yrs)")
+  gap_perc_black_youth <- plot_gap_perc(refs_df_percent_youth, "Youth (<20 yrs)")
+  
+  p <- (((gap_perc_black_youth) + 
+           plot_layout(axes = "collect")) | 
+          ((gap_perc_black_adult) + 
+             plot_layout(axes = "collect")) ) + 
+    plot_annotation(tag_levels = 'A') 
+  
+  p <- ((gap_perc_black_youth + gap_perc_black_adult +  
+           plot_layout(axes="collect"))/guide_area()) + plot_annotation(tag_levels = 'A') + plot_layout(guides = "collect")
+  
+  return(p)
+}
+
+plot_participants_change(refs_adult_all_races, refs_youth_all_races, includedRace = c(1,2,3,4,5,6,7))
+
+```
 
 ```{r, warning=FALSE, message=FALSE}
 #| label: fig-racialgap
